--- a/.github/workflows/e2e_latest_react_app.yml
+++ b/.github/workflows/e2e_latest_react_app.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   services:
     redis:
-      image: verdaccio
+      image: verdaccio/verdaccio
       ports:
         - 4873:4873
   e2e:
@@ -16,17 +16,4 @@ jobs:
        uses: actions/setup-node@master
        with:
          node-version: 13.x
-     - run:
-         name: npm-verbosity
-         command: npm config set loglevel verbose
-     - run:
-         name: npm-set-registry
-         command: npm set registry http://0.0.0.0:4873
-     - run:
-         name: create-registry-user
-         command: |
-           curl -X PUT http://0.0.0.0:4873/-/user/org.couchdb.user:liran -H "Content-Type: application/json" -d '{"name":"test","password":"test","email":"test@example.com","type":"user"}' | node -pe 'JSON.parse(fs.readFileSync(0)).token' | xargs npm config set _authToken
-     name: npm-info-test
-       command: npm info verdaccio
-
 
