--- a/.github/workflows/e2e_latest_react_app.yml
+++ b/.github/workflows/e2e_latest_react_app.yml
@@ -16,14 +16,11 @@ jobs:
       uses: actions/setup-node@master
       with:
        node-version: 13.x
-    - run:
-       name: npm-verbosity
-       command: npm config set loglevel verbose
-    - run:
-       name: npm-set-registry
-       command: npm set registry http://0.0.0.0:4873
-    - run:
-       name: npm-info-test
-       command: npm info verdaccio
+    - name: npm-verbosity
+      run: npm config set loglevel verbose
+    - name: npm-set-registry
+      run: npm set registry http://0.0.0.0:4873
+    - name: npm-info-test
+      run: npm info verdaccio
 
 
