--- a/.github/workflows/e2e_latest_react_app.yml
+++ b/.github/workflows/e2e_latest_react_app.yml
@@ -1,4 +1,4 @@
-name: E2E Test Latest Verdaccio
+name: E2E Test CRA Latest Verdaccio
 
 on: [push]
 
@@ -24,7 +24,7 @@ jobs:
       run: npm -g i npm
     - name: create-react-app example
       run: |
-        npx create-react-app my-cra-ts --template typescript && cd my-cra-ts --use-npm
+        npx create-react-app --use-npm my-cra-ts --template typescript && cd my-cra-ts
         npm build
   e2e-yarn:
     name: E2E yarn
