chore: update flow

--- a/.github/workflows/e2e_latest_react_app.yml
+++ b/.github/workflows/e2e_latest_react_app.yml
@@ -5,8 +5,8 @@ on:
     - cron: '0 */12 * * *'
   push:
     branches:
-      - master
-
+#      - master
+      - '**'
 jobs:
   e2e-npm:
     strategy:
