chore: update flow

--- a/.github/workflows/e2e_latest_react_app.yml
+++ b/.github/workflows/e2e_latest_react_app.yml
@@ -5,17 +5,16 @@ on:
     - cron: '0 */12 * * *'
   push:
     branches:
-#      - master
-      - '**'
+      - master
+
 jobs:
   e2e-npm:
     strategy:
       fail-fast: false
       matrix:
         node_version: [10, 12, 13]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
     name: E2E npm
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     services:
       redis:
         image: verdaccio/verdaccio
@@ -42,8 +41,7 @@ jobs:
       fail-fast: false
       matrix:
         node_version: [10, 12, 13]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     services:
       redis:
         image: verdaccio/verdaccio
