--- a/.github/workflows/e2e_latest_webpack.yml
+++ b/.github/workflows/e2e_latest_webpack.yml
@@ -1,4 +1,4 @@
-name: E2E Test Webpack app
+name: E2E Test CLI Apps
 
 on:
   schedule:
@@ -9,7 +9,7 @@ on:
       - '**'
 
 jobs:
-  e2e-npm:
+  setup-verdaccio:
     name: E2E npm
     runs-on: ubuntu-latest
     services:
@@ -17,6 +17,10 @@ jobs:
         image: verdaccio/verdaccio
         ports:
           - 4873:4873
+  e2e-webpack:
+    name: E2E npm
+    runs-on: ubuntu-latest
+    needs: setup-verdaccio
     steps:
     - uses: actions/checkout@master
     - name: npm-verbosity
