--- a/.github/workflows/e2e_latest_webpack.yml
+++ b/.github/workflows/e2e_latest_webpack.yml
@@ -18,7 +18,7 @@ jobs:
         ports:
           - 4873:4873
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
     - name: npm-verbosity
       run: npm config set loglevel verbose
     - name: npm-set-registry
@@ -41,7 +41,10 @@ jobs:
         ports:
           - 4873:4873
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '13.x'
       - name: npm-verbosity
         run: npm config set loglevel verbose
       - name: npm-set-registry
@@ -56,5 +59,5 @@ jobs:
           cd angular-app
           npm install
           ng build
-      - name: compile webpack
+      - name: list angular
         run: ls -lsa e2e/examples/angular-app
