--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     name: Node ${{ matrix.node_version }}
 
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         node_version: [10, 12, 13]
 
